2012-12-07  Marco Randazzo <marco.randazzo@iit.it>
	* src\libYARP_dev\include\yarp\dev\ServerInertial.h
	fixed issue on timestamps for devices which do not implement IPreciselyTimed
	[thanks Barry Ridge]
	
2012-11-27  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* bindings/yarp.i: add C# tweak for setTargetPeriod
	[thanks Stephane Lallee]

2012-11-23  Lorenzo Natale  <lorenzo.natale@iit.it>
	* tagging version 2.3.20

2012-11-18  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/modules/ffmpeg/ffmpeg_api.h (YARP_avcodec_open): fix
	typo [thanks Juan G Victores]

2012-11-14  Ugo Pattacini <ugo.pattacini@iit.it>
   * libYARP_dev/ControlBoardPid.h,.cpp,ServerControlBoard.cpp,
     RemoteControlBoard.cpp: stiction values name changed from
     positive/negative to up/down.

2012-10-30  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* src/yarpscope/src/MainWindow.cpp
	* src/yarpscope/src/PlotManager.cpp
	* src/yarpscope/src/PlotManager.h: Implement auto rescale
	  function in yarpscope

2012-10-24  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_dev/include/yarp/dev/TestMotor.h: have test_motor
	device support IVelocityControl [thanks Juan G Victores]

	* example/matlab/simulink: example of using YARP from Matlab's
	simulink, contributed by Juan [thanks Juan G Victores]

2012-10-23  Marco Randazzo <marco.randazzo@iit.it>
	* src/libYARP_dev/ControlBoardPid.cpp 
	* src/libYARP_dev/include/yarp/dev/ControlBoardPid.h
	stiction_pos_val and stiction_neg_val parameters have been added to the yarp::dev::Pid class.
	
	* src/libYARP_dev/RemoteControlBoard.cpp
	* src/libYARP_dev/ServerControlBoard.cpp
	all the related methods (get/set pid) have been modified accordingly.	
	
	* conf/YarpVersion.cmake
    YARP_VERSION_TWEAK "9424"

2012-10-23  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* src/libYARP_OS/include/yarp/os/Thread.h: Make
	yarp::os::Thread::join() method public.

	* conf/YarpFindDependencies.cmake: Require TinyXML 2.6 for