@@ -1,3 +1,8 @@
+2012-12-11  Paul Fitzpatrick  <paul@robotrebuilt.com>
+
+	* src/idls/thrift/tests/demo/demo.thrift: add test for vectors
+	of enums, problem reported by Elena [thanks Elena Ceseracciu]
+
 2012-12-07  Marco Randazzo <marco.randazzo@iit.it>
 	* src\libYARP_dev\include\yarp\dev\ServerInertial.h
 	fixed issue on timestamps for devices which do not implement IPreciselyTimed
